--- a/src/components/Button.css
+++ b/src/components/Button.css
@@ -1,6 +1,4 @@
-:root {
-    --primary: #1888ff;
-  }
+
   
   .btn {
     padding: 8px 20px;
@@ -8,17 +6,18 @@
     outline: none;
     border: none;
     font-size: 18px;
-    color: #fff;
+    color: #004aad;
     cursor: pointer;
-    background-color: var(--primary);
+    background-color: #f2f2f2;
   }
   
   .btn:hover {
-    padding: 6px 18px;
-    transition: all 0.3s ease-out;
-    background-color: transparent;
-    color: #fff;
+    
+    transition: all 0.3s ease-out; 
+    background-color: 
+    #f5a700;
+    color:#fff;
     border-radius: 4px;
-    border: 2px solid var(--primary);
+    border: none;
     transition: all 0.3s ease-out;
   }
