--- a/src/components/DropDown.css
+++ b/src/components/DropDown.css
@@ -1,20 +1,21 @@
 .dropdown-menu {
-    background: red;
+    /* background: red; */
     width: 200px;
     position: absolute;
-    top: 80px;
+    top: 60px;
     list-style: none;
     text-align: start;
   }
   
   .dropdown-menu li {
-    background: #1888ff;
+    background: #fff;
     cursor: pointer;
   }
   
-  .dropdown-menu li:hover {
-    background: #5cabff;
-  }
+  /* .dropdown-menu li:hover {
+    background: #d8d8d8;
+  
+  } */
   
   .dropdown-menu.clicked {
     display: none;
@@ -25,8 +26,11 @@
     height: 100%;
     width: 100%;
     text-decoration: none;
-    color: #fff;
+    color: #277fdd;
     padding: 16px;
+  }
+  .dropdown-link:hover{
+  color: goldenrod;
   }
   
   @media screen and (max-width: 960px) {
