--- a/src/components/NavBar.css
+++ b/src/components/NavBar.css
@@ -7,6 +7,7 @@
     align-items: center;
     font-size: .9rem;
     font-weight: 400;
+  
  }
   
   .navbar-logo {
@@ -34,12 +35,14 @@
     width: 70vw;
     justify-content: end;
     margin-right: 1rem;
+   
   }
   
   .nav-item {
     display: flex;
     align-items: center;
     height: 80px;
+    
   }
   
   .nav-links {
@@ -79,13 +82,13 @@
     }
   
     .nav-menu {
-      display: grid;
-     grid-template-columns:1fr ;
-     grid-template-rows: repeat(8,auto);
+      display: flex;
+      flex-direction: column;
+     
       width: 100%;
       height: 90vh;
       position: absolute;
-      top: 80px;
+margin-top: 20px;
       left: -100%;
       opacity: 1;
       transition: all 0.5s ease;
@@ -107,6 +110,7 @@
       padding: 2rem;
       width: 100%;
       display: table;
+     
     }
   
     .nav-links:hover {
