--- a/src/components/NavBar.css
+++ b/src/components/NavBar.css
@@ -1,162 +1,175 @@
 .navbar {
-    background: #fff
-     ;
-    height: 70px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    font-size: .9rem;
-    font-weight: 400;
- }
-  
-  .navbar-logo {
-   
-    justify-self: start;
-    margin-left: 0px;
-    margin-right: 10px;
-    cursor: pointer;
-  
+  background: #fff
+   ;
+  height: 70px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: .9rem;
+  font-weight: 400;
+
+}
+
+.navbar-logo {
  
+  justify-self: start;
+  margin-left: 0px;
+  margin-right: 10px;
+  cursor: pointer;
+
+
+}
+
+/* .fa-firstdraft {
+  margin-left: 0.5rem;
+  font-size: 1.6rem;
+
+} */
+
+.nav-menu {
+  display: grid;
+  grid-template-columns: repeat(7, auto);
+  grid-gap: 10px;
+  list-style: none;
+  text-align: center;
+  width: 70vw;
+  justify-content: end;
+  margin-right: 1rem;
+ 
+}
+
+.nav-item {
+  display: flex;
+  align-items: center;
+  height: 80px;
+  
+}
+
+.nav-links {
+  color: #0641a4 ;
+  text-decoration: none;
+  padding: 0.5rem .3rem;
+}
+
+.nav-links:hover {
+  color:#f5a800;
+  border-radius: 4px;
+  transition: all 0.2s ease-out;
+}
+
+.fa-bars {
+ 
+  color: #0641a4
+  ;
+}
+
+.nav-links-mobile {
+  display: none;
+}
+
+.menu-icon {
+  display: none;
+}
+.nav-border-bottom{
+ background-color: #f5a800;
+ padding: 1rem;
+ width: 100%;
+}
+@media screen and (max-width: 960px) {
+  .NavbarItems {
+    position: relative;
+   
   }
-  
-  .fa-firstdraft {
-    margin-left: 0.5rem;
-    font-size: 1.6rem;
-  
-  }
-  
+
   .nav-menu {
-    display: grid;
-    grid-template-columns: repeat(7, auto);
-    grid-gap: 10px;
-    list-style: none;
-    text-align: center;
-    width: 70vw;
-    justify-content: end;
-    margin-right: 1rem;
-  }
-  
-  .nav-item {
     display: flex;
-    align-items: center;
-    height: 80px;
+    flex-direction: column;
+   
+    width: 100%;
+    height: 90vh;
+    position: absolute;
+margin-top: 20px;
+    left: -100%;
+    opacity: 1;
+    transition: all 0.5s ease;
   }
+
+  .nav-menu.active {
+    background: #fff;
   
+    top: 100px;
+    left: 0;
+    opacity: 1;
+    transition: all 0.5s ease;
+    z-index: 1;
+    
+  }
+
   .nav-links {
-    color: #0641a4 ;
-    text-decoration: none;
-    padding: 0.5rem .3rem;
+    text-align: center;
+    padding: 2rem;
+    width: 100%;
+    display: table;
+   
   }
-  
+
   .nav-links:hover {
-    color:#f5a800;
-    border-radius: 4px;
-    transition: all 0.2s ease-out;
+ 
+    border-radius: 0;
   }
-  
-  .fa-bars {
-   
-    color: #0641a4
-    ;
+
+  .navbar-logo {
+    position: absolute;
+    top: 0;
+    left: 0;
+    transform: translate(5%, 10%);
+    
   }
-  
-  .nav-links-mobile {
-    display: none;
-  }
-  
+
   .menu-icon {
+    display: block;
+    position: absolute;
+    top: 0;
+    right: 0;
+    transform: translate(-100%, 60%);
+    font-size: 1.8rem;
+    cursor: pointer;
+  }
+
+  .fa-times {
+  
+    color: #0641a4 ;
+    font-size: 2rem;
+  }
+
+  .nav-links-mobile {
+    display: block;
+    text-align: center;
+    padding: .5rem;
+    margin: 2rem auto;
+    border-radius: 4px;
+    width: 80%;
+    background: #1888ff;
+    text-decoration: none;
+    color: #fff;
+    font-size: 1.5rem;
+  }
+
+  .nav-links-mobile:hover {
+    background: #fff;
+    color: #1888ff;
+    transition: 250ms;
+  }
+
+  button {
     display: none;
   }
-  .nav-border-bottom{
-   background-color: #f5a800;
-   padding: 1rem;
-   width: 100%;
-  }
-  @media screen and (max-width: 960px) {
-    .NavbarItems {
-      position: relative;
-    }
-  
-    .nav-menu {
-      display: flex;
-      flex-direction: column;
-      width: 100%;
-      height: 90vh;
-      position: absolute;
-      top: 80px;
-      left: -100%;
-      opacity: 1;
-      transition: all 0.5s ease;
-    }
-  
-    .nav-menu.active {
-      background: #fff;
-      top: 200px;
-      left: 0;
-      opacity: 1;
-      transition: all 0.5s ease;
-      z-index: 1;
-      
-    }
-  
-    .nav-links {
-      text-align: center;
-      padding: 2rem;
-      width: 100%;
-      display: table;
-    }
-  
-    .nav-links:hover {
-   
-      border-radius: 0;
-    }
-  
-    .navbar-logo {
-      position: absolute;
-      top: 0;
-      left: 0;
-      transform: translate(5%, 10%);
-      
-    }
-  
-    .menu-icon {
-      display: block;
-      position: absolute;
-      top: 0;
-      right: 0;
-      transform: translate(-100%, 60%);
-      font-size: 1.8rem;
-      cursor: pointer;
-    }
-  
-    .fa-times {
-      color: #fff;
-      font-size: 2rem;
-    }
-  
-    .nav-links-mobile {
-      display: block;
-      text-align: center;
-      padding: 1.5rem;
-      margin: 2rem auto;
-      border-radius: 4px;
-      width: 80%;
-      background: #1888ff;
-      text-decoration: none;
-      color: #fff;
-      font-size: 1.5rem;
-    }
-  
-    .nav-links-mobile:hover {
-      background: #fff;
-      color: #1888ff;
-      transition: 250ms;
-    }
-  
-    button {
-      display: none;
-    }
-  }
+}
+
+
+
+
+
 
 
   
