--- a/src/components/NavBar.css
+++ b/src/components/NavBar.css
@@ -1,180 +1,176 @@
-.navbar {
-  background: #fff
-   ;
-  height: 70px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  font-size: .9rem;
-  font-weight: 400;
-
+.only-desktop {
+  display: none;
 }
-
-.navbar-logo {
+.nav-border-bottom {
+  margin-top: 80px;
+  background-color: #f5a800;
+  padding: 1rem;
+  width: 100%;
+}
+.Navbar-Items {
+  position: relative;
  
-  justify-self: start;
-  margin-left: 0px;
-  margin-right: 10px;
-  cursor: pointer;
-
-
 }
-
-/* .fa-firstdraft {
-  margin-left: 0.5rem;
-  font-size: 1.6rem;
-
-} */
 
 .nav-menu {
-  display: grid;
-  grid-template-columns: repeat(7, auto);
-  grid-gap: 10px;
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  height: 100vh;
+  position: absolute;
+  margin: 20px 50px;
+  margin-top: 20px;
+  left: -100%;
+  opacity: 1;
+  transition: all 0.5s ease;
+  justify-content: center;
   list-style: none;
-  text-align: center;
-  width: 70vw;
-  justify-content: end;
-  margin-right: 1rem;
- 
 }
 
-.nav-item {
-  display: flex;
-  align-items: center;
-  height: 80px;
-  
+.nav-menu.active {
+  background: #fff;
+  /* display: flex; */
+  top: 50px;
+  left: 0;
+  opacity: 1;
+  transition: all 0.5s ease;
+  z-index: 1;
 }
 
 .nav-links {
-  color: #0641a4 ;
+
+  /* padding: 2%; */
+  width: 100%;
+
   text-decoration: none;
-  padding: 0.5rem .3rem;
+  padding-bottom: 20px;
+  margin-bottom: 20px;
 }
+.nav-links h1 {
 
+text-align: center;
+}
 .nav-links:hover {
-  color:#f5a800;
-  border-radius: 4px;
-  transition: all 0.2s ease-out;
+  border-radius: 0;
 }
 
-.fa-bars {
- 
-  color: #0641a4
-  ;
-}
-
-.nav-links-mobile {
-  display: none;
+.navbar-logo {
+  position: absolute;
+  top: 0;
+  left: 0;
+  transform: translate(5%, 10%);
 }
 
 .menu-icon {
+  display: block;
+  position: absolute;
+  top: 0;
+  right: 0;
+  transform: translate(-100%, 60%);
+  font-size: 1.8rem;
+  cursor: pointer;
+}
+
+.fa-times {
+  color: #0641a4;
+  font-size: 2rem;
+}
+
+.nav-links-mobile {
+  display: block;
+
+  padding: 1.5rem;
+  margin: 2rem auto;
+  border-radius: 4px;
+  width: 8ch;
+  background: #1888ff;
+
+  color: #fff;
+  font-size: 1.5rem;
+}
+
+.nav-links-mobile:hover {
+  background: #fff;
+  color: #1888ff;
+  transition: 250ms;
+}
+
+button {
   display: none;
 }
-.nav-border-bottom{
- background-color: #f5a800;
- padding: 1rem;
- width: 100%;
-}
-@media screen and (max-width: 960px) {
-  .NavbarItems {
-    position: relative;
-   
-  }
 
-  .nav-menu {
-    display: flex;
-    flex-direction: column;
-   
-    width: 100%;
-    height: 90vh;
-    position: absolute;
-margin-top: 20px;
-    left: -100%;
-    opacity: 1;
-    transition: all 0.5s ease;
+@media screen and (min-width: 960px) {
+  .only-mobile {
+    display: none;
   }
-
-  .nav-menu.active {
+  .navbar {
     background: #fff;
-  
-    top: 100px;
-    left: 0;
-    opacity: 1;
-    transition: all 0.5s ease;
-    z-index: 1;
-    
-  }
+    /* height: 70px; */
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 0.9rem;
+    font-weight: 400;
 
-  .nav-links {
-    text-align: center;
-    padding: 2rem;
-    width: 100%;
-    display: table;
-   
-  }
-
-  .nav-links:hover {
- 
-    border-radius: 0;
   }
 
   .navbar-logo {
-    position: absolute;
-    top: 0;
-    left: 0;
-    transform: translate(5%, 10%);
-    
-  }
-
-  .menu-icon {
-    display: block;
-    position: absolute;
-    top: 0;
-    right: 0;
-    transform: translate(-100%, 60%);
-    font-size: 1.8rem;
+    justify-self: start;
+    margin-left: 0px;
+    margin-right: 10px;
     cursor: pointer;
   }
 
-  .fa-times {
+  /* .fa-firstdraft {
+    margin-left: 0.5rem;
+    font-size: 1.6rem;
   
-    color: #0641a4 ;
-    font-size: 2rem;
+  } */
+
+  .nav-menu {
+    display: grid;
+    grid-template-columns: repeat(7, auto);
+    grid-gap: 10px;
+    list-style: none;
+    text-align: center;
+    width: 70vw;
+    justify-content: end;
+    margin-right: 1rem;
+  }
+
+  .nav-item {
+    display: flex;
+    align-items: center;
+    height: 80px;
+   
+  }
+
+  .nav-links {
+    color: #0641a4;
+    text-decoration: none;
+    padding: 1.5rem 1.3rem;
+  }
+
+  .nav-links:hover {
+    color: #f5a800;
+    border-radius: 4px;
+    transition: all 0.2s ease-out;
+  }
+
+  .fa-bars {
+    color: #0641a4;
   }
 
   .nav-links-mobile {
-    display: block;
-    text-align: center;
-    padding: .5rem;
-    margin: 2rem auto;
-    border-radius: 4px;
-    width: 80%;
-    background: #1888ff;
-    text-decoration: none;
-    color: #fff;
-    font-size: 1.5rem;
-  }
-
-  .nav-links-mobile:hover {
-    background: #fff;
-    color: #1888ff;
-    transition: 250ms;
-  }
-
-  button {
     display: none;
   }
+
+  .menu-icon {
+    display: none;
+  }
+  .nav-border-bottom {
+    background-color: #f5a800;
+    padding: 1rem;
+    width: 100%;
+  }
 }
-
-
-
-
-
-
-
-
-
-
-
-
-  
